--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
 					<b><font size=4>Airport Information</font></b></br><br>
 					<p><b>The closest airports to Brownsville are…</b><br>
 
-					Brownsville South Padre International Airport in Brownsville, TX (35 minute drive from the venue) and<br>
-					Valley International Airport in Harlingen, TX (25 minute drive from the venue) <br><br>
+					<u>Brownsville South Padre International Airport</u> in Brownsville, TX <i>(35 minute drive from the venue)</i> and<br>
+					<u>Valley International Airport</u> in Harlingen, TX <i>(25 minute drive from the venue)</i> <br><br>
 
 					<b>There are other alternative airports to fly into…</b><br>
-					McAllen International Airport (1 hr drive from Brownsville)<br><br>
+					<u>McAllen International Airport</u> <i>(1 hr drive from Brownsville)</i><br><br>
 
 					<b>You can also fly into airports in bigger cities in TX</b> (San Antonio, Austin, or Houston), which is the cheapest option, but you need to be prepared to make the drive down to Brownsville from there<br><br>
 
