--- a/english.html
+++ b/english.html
@@ -79,9 +79,12 @@
 			</div>
 		</div>
 	</nav>
-
+	<div id="loader" class="loader">
+		<div id="my-svg"></div>
+			</div>
 	<div id="top" class="main-hero">
 		<div class="c-hero-banner c-hero-banner--main">
+			<div class="cover"></div>
 			<div class="c-hero-banner__section c-hero-banner__image">
 				<img class="lazyload" src="img/banner.jpg" alt="image">
 			</div>
