--- a/spanish.html
+++ b/spanish.html
@@ -79,10 +79,13 @@
 			</div>
 		</div>
 	</nav>
-
-
+	
+	<div id="loader" class="loader">
+		<div id="my-svg"></div>
+			</div>
 	<div id="top" class="main-hero">
 		<div class="c-hero-banner c-hero-banner--main">
+			<div class="cover"></div>
 			<div class="c-hero-banner__section c-hero-banner__image">
 				<img class="lazyload" src="img/banner.jpg" alt="image">
 			</div>
