changed rsvp date

--- a/spanish.html
+++ b/spanish.html
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 	</nav>
-	
+
 	<div id="loader" class="loader">
 		<div id="my-svg"></div>
 			</div>
@@ -105,7 +105,7 @@
 			</div>-->
 			<h1 class="title">Daniel & Nikki</h1>
 
-			<p class="m-auto">Confirme aqui para el <b>1o de Abril</b>
+			<p class="m-auto">Confirme aqui para el <b>1o de Mayo</b>
 				<br>Solo una persona tiene que confirmar para la familia!</p>
 			<div class="form-group">
 				<a onclick="window.open(this.href,'_blank');return false;" href="https://danielnikki.app.rsvpify.com/" class="btn btn-outline-dark rounded-0 px-3 py-1 font-weight-bold">Confirmar</a>
@@ -371,7 +371,7 @@
 			<!--<p class="subtitle m-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>-->
 
 			<p><b>Cual es la fecha limite para confirmar?</b><br>
-			Abril 1, 2020</p>
+			Mayo 1, 2020</p>
 			<!-- Cual es la fecha limite para confirmar?
 			Abril 1, 2020-->
 
