--- a/spanish.html
+++ b/spanish.html
@@ -110,7 +110,7 @@
 			<div class="form-group">
 				<a onclick="window.open(this.href,'_blank');return false;" href="https://danielnikki.app.rsvpify.com/" class="btn btn-outline-dark rounded-0 px-3 py-1 font-weight-bold">Confirmar</a>
 			</div><br>
-		<p class="m-auto">At this moment, we are planning to continue with the wedding as normal. However, we will keep a close eye on the spread of COVID-19 as the date approaches. We will let you know of any changes through this website and through personal contact.</p>
+		<p class="m-auto">Por el momento, estamos planeando continuar con la boda. Pero nos mantendremos al pendiente de los efectos de el COVID-19. Les dejaremos saber si hay cambios por medio de esta página y por contacto personal.</p>
 		</div>
 	</section>
 	<!-- Section Date -->
@@ -325,9 +325,9 @@
 		<div class="container">
 			<h1 class="title">Regalos</h1>
 			<p class="subtitle m-auto">
-				As we begin our lives together, we are also making other transitions: Daniel is graduating from college and we are moving back to Texas. Please consider supporting us in these transitions through a monetary gift:<br><br>
+				Mientras empezamos nuestra vida juntos, también estamos haciendo otras transiciones. Daniel se gradua de la universidad y nosotros nos mudamos a Texas. Por favor considere apoyarnos en estas transiciones con regalos monetarios:<br><br>
 
-				Cash and checks can be made out to Daniel Riojas or Selena Tully<br>
+				Efectivo y cheques pueden ser recibidos a nombre de Daniel Riojas o Selena Tully<br>
 
 				Venmo: <b><a href="https://venmo.com/nikkitully">@nikkitully</a> <a href="https://venmo.com/danielriojas">@danielriojas</a></b>
 			</p>
