travel edits and rsvp links

--- a/english.html
+++ b/english.html
@@ -107,7 +107,7 @@
 			<p class="m-auto">RSVP here by <b>May 1st</b>
 				<br>Only one person needs to RSVP for the whole family! Please include additional guests in “Total In Your Party”</p>
 			<div class="form-group">
-				<a onclick="window.open(this.href,'_blank');return false;" href="https://danielnikki.app.rsvpify.com/" class="btn btn-outline-dark rounded-0 px-3 py-1 font-weight-bold">RSVP</a>
+				<a onclick="window.open(this.href,'_blank');return false;" href="https://forms.gle/QERPDmwRkxHkpM5z6" class="btn btn-outline-dark rounded-0 px-3 py-1 font-weight-bold">RSVP</a>
 			</div><br>
 		<p class="m-auto">At this moment, we are planning to continue with the wedding as normal. However, we will keep a close eye on the spread of COVID-19 as the date approaches. We will let you know of any changes through this website and through personal contact.</p>
 		</div>
@@ -275,11 +275,11 @@
 					<b><font size=4>Airport Information</font></b></br><br>
 					<p><b>The closest airports to Brownsville are…</b><br>
 
-					<u>Brownsville South Padre International Airport</u> in Brownsville, TX <i>(35 minute drive from the venue)</i> and<br>
-					<u>Valley International Airport</u> in Harlingen, TX <i>(25 minute drive from the venue)</i> <br><br>
+					Brownsville South Padre International Airport in Brownsville, TX <i>(35 minute drive from the venue)</i> and<br>
+					Valley International Airport in Harlingen, TX <i>(25 minute drive from the venue)</i> <br><br>
 
 					<b>There are other alternative airports to fly into…</b><br>
-					<u>McAllen International Airport</u> <i>(1 hr drive from Brownsville)</i><br><br>
+					McAllen International Airport <i>(1 hr drive from the venue)</i><br><br>
 
 					<b>You can also fly into airports in bigger cities in TX</b> (San Antonio, Austin, or Houston), which is the cheapest option, but you need to be prepared to make the drive down to Brownsville from there<br><br>
 
