--- a/spanish.html
+++ b/spanish.html
@@ -108,7 +108,7 @@
 			<p class="m-auto">Confirme aqui para el <b>1o de Mayo</b>
 				<br>Solo una persona tiene que confirmar para la familia!</p>
 			<div class="form-group">
-				<a onclick="window.open(this.href,'_blank');return false;" href="https://danielnikki.app.rsvpify.com/" class="btn btn-outline-dark rounded-0 px-3 py-1 font-weight-bold">Confirmar</a>
+				<a onclick="window.open(this.href,'_blank');return false;" href="https://forms.gle/JEpnvn59deVf5D7J7" class="btn btn-outline-dark rounded-0 px-3 py-1 font-weight-bold">Confirmar</a>
 			</div><br>
 		<p class="m-auto">Por el momento, estamos planeando continuar con la boda. Pero nos mantendremos al pendiente de los efectos de el COVID-19. Les dejaremos saber si hay cambios por medio de esta página y por contacto personal.</p>
 		</div>
@@ -276,11 +276,11 @@
 					<b><font size=4>Información del Aeropuerto</font></b></br><br>
 					<p><b>Los aeropuertos mas cercanos a Brownsville son...</b><br>
 
-					<u>Brownsville South Padre International Airport</u> en Brownsville, TX <i>(a 35 minutos de el evento)</i> y<br>
-					<u>Valley International Airport</u> en Harlingen, TX <i>(a 20 minutos de el evento)</i> <br><br>
+					Brownsville South Padre International Airport en Brownsville, TX <i>(a 35 minutos de el evento)</i> y<br>
+					Valley International Airport en Harlingen, TX <i>(a 20 minutos de el evento)</i> <br><br>
 
 					<b>Hay otros aeropuertos cercanos...</b><br>
-					<u>McAllen International Airport</u> <i>(a 1 hora de Brownsville)</i><br><br>
+					McAllen International Airport <i>(a 1 hora de el evento)</i><br><br>
 
 					<b>Tambien puede llegar a aeropuertos en ciudades mas grandes en TX</b> (San Antonio, Austin o Houston). Esta opcion es mas barata pero tiene que estar preparado(a) para manejar a Brownsville de ahi.<br><br>
 
