--- a/english.html
+++ b/english.html
@@ -105,7 +105,7 @@
 			<h1 class="title">Daniel & Nikki</h1>
 
 			<p class="m-auto">RSVP here by <b>May 1st</b>
-				<br>Only one person needs to RSVP for the whole family! Please include additional guests in “Total In Your Party”</p>
+				<br>Only one person needs to RSVP for the whole family!</p>
 			<div class="form-group">
 				<a onclick="window.open(this.href,'_blank');return false;" href="https://forms.gle/QERPDmwRkxHkpM5z6" class="btn btn-outline-dark rounded-0 px-3 py-1 font-weight-bold">RSVP</a>
 			</div><br>
