--- a/english.html
+++ b/english.html
@@ -104,12 +104,12 @@
 			</div>-->
 			<h1 class="title">Daniel & Nikki</h1>
 
-			<p class="m-auto">RSVP here by <b>May 1st</b>
+			<p class="m-auto">RSVP here by <mark><b>June 1st</b></mark>
 				<br>Only one person needs to RSVP for the whole family!</p>
 			<div class="form-group">
 				<a onclick="window.open(this.href,'_blank');return false;" href="https://forms.gle/QERPDmwRkxHkpM5z6" class="btn btn-outline-dark rounded-0 px-3 py-1 font-weight-bold">RSVP</a>
 			</div><br>
-		<p class="m-auto">At this moment, we are planning to continue with the wedding as normal. However, we will keep a close eye on the spread of COVID-19 as the date approaches. We will let you know of any changes through this website and through personal contact.</p>
+		<p class="m-auto"><mark>Update 4/30/20:</mark> We have changed the deadline to RSVP to June 1st. We understand that COVID-19 has impacted many of our plans, and travel even within the state of Texas feels risky. We are continuing to plan for the wedding as normal while also keeping in mind alternative ways to get the people we love involved in our special day, perhaps through a livestream of the wedding. We will continue to update the website as the date gets nearer.</p>
 		</div>
 	</section>
 	<!-- Section Date -->
@@ -125,6 +125,7 @@
 						6:30PM<br><br>1347 Costa del Sol Dr.<br>
 						Brownsville, TX 78520
 					</h3>
+					<h4>Gate code to enter neighborhood: 4444#</h4>
 				</div>
 			</div>
 			<div id="timer" class="timer d-flex justify-content-center">
@@ -275,11 +276,11 @@
 					<b><font size=4>Airport Information</font></b></br><br>
 					<p><b>The closest airports to Brownsville are…</b><br>
 
-					Brownsville South Padre International Airport in Brownsville, TX <i>(35 minute drive from the venue)</i> and<br>
-					Valley International Airport in Harlingen, TX <i>(25 minute drive from the venue)</i> <br><br>
+					Brownsville South Padre International Airport (BRO) in Brownsville, TX <i>(35 minute drive from the venue)</i> and<br>
+					Valley International Airport (HRL) in Harlingen, TX <i>(25 minute drive from the venue)</i> <br><br>
 
 					<b>There are other alternative airports to fly into…</b><br>
-					McAllen International Airport <i>(1 hr drive from the venue)</i><br><br>
+					McAllen International Airport (MFE) in McAllen, TX <i>(1 hr drive from the venue)</i><br><br>
 
 					<b>You can also fly into airports in bigger cities in TX</b> (San Antonio, Austin, or Houston), which is the cheapest option, but you need to be prepared to make the drive down to Brownsville from there<br><br>
 
@@ -324,7 +325,7 @@
 		<div class="container">
 			<h1 class="title">Gifts</h1>
 			<p class="subtitle m-auto">
-				As we begin our lives together, we are also making other transitions: Daniel is graduating from college and we are moving back to Texas. Please consider supporting us in these transitions through a monetary gift:<br><br>
+				As we begin our lives together, we are also making other transitions. Daniel is graduating from Brown University with his Bachelor’s of Science in Psychology. We will also be moving from our homes in Providence, RI to Houston, TX where Nikki will be teaching middle schoolers as part of the 2020 Teach For America corps. Please consider supporting us in these transitions through a monetary gift:<br><br>
 
 				Cash and checks can be made out to Daniel Riojas or Selena Tully<br>
 
@@ -370,7 +371,7 @@
 			<!--<p class="subtitle m-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>-->
 
 			<p><b>When is the deadline to RSVP?</b><br>
-			May 1, 2020</p>
+			The new deadline to RSVP is <mark>June 1st, 2020</mark></p>
 			<!-- Cual es la fecha limite para confirmar?
 			Abril 1, 2020-->
 
