--- a/spanish.html
+++ b/spanish.html
@@ -105,12 +105,12 @@
 			</div>-->
 			<h1 class="title">Daniel & Nikki</h1>
 
-			<p class="m-auto">Confirme aqui para el <b>1o de Mayo</b>
+			<p class="m-auto">Confirme aqui para el <mark><b>1o de Junio</b></mark>
 				<br>Solo una persona tiene que confirmar para la familia!</p>
 			<div class="form-group">
 				<a onclick="window.open(this.href,'_blank');return false;" href="https://forms.gle/JEpnvn59deVf5D7J7" class="btn btn-outline-dark rounded-0 px-3 py-1 font-weight-bold">Confirmar</a>
 			</div><br>
-		<p class="m-auto">Por el momento, estamos planeando continuar con la boda. Pero nos mantendremos al pendiente de los efectos de el COVID-19. Les dejaremos saber si hay cambios por medio de esta página y por contacto personal.</p>
+		<p class="m-auto"><mark>Aviso 4/30/20:</mark> Hemos cambiado la fecha límite para reservar a Junio 1. Entendemos que el COVID-19 ha impactado nuestros planes, y viajar aun en el estado de Texas se siente riesgoso. Continuamos a planear la boda pero también estamos pensando en maneras alternativas en la que la gente que amamos puedan ser parte de nuestro dia especial, tal vez por video en vivo. Seguiremos actualizando la página web mientras que el dia se acerca.</p>
 		</div>
 	</section>
 	<!-- Section Date -->
@@ -126,6 +126,7 @@
 						6:30PM<br><br>1347 Costa del Sol Dr.<br>
 						Brownsville, TX 78520
 					</h3>
+					<h4>Codigo para el porton del vecindario: 4444#</h4>
 				</div>
 			</div>
 			<div id="timer" class="timer d-flex justify-content-center">
@@ -276,11 +277,11 @@
 					<b><font size=4>Información del Aeropuerto</font></b></br><br>
 					<p><b>Los aeropuertos mas cercanos a Brownsville son...</b><br>
 
-					Brownsville South Padre International Airport en Brownsville, TX <i>(a 35 minutos de el evento)</i> y<br>
-					Valley International Airport en Harlingen, TX <i>(a 20 minutos de el evento)</i> <br><br>
+					Brownsville South Padre International Airport (BRO) en Brownsville, TX <i>(a 35 minutos de el evento)</i> y<br>
+					Valley International Airport (HRL) en Harlingen, TX <i>(a 20 minutos de el evento)</i> <br><br>
 
 					<b>Hay otros aeropuertos cercanos...</b><br>
-					McAllen International Airport <i>(a 1 hora de el evento)</i><br><br>
+					McAllen International Airport (MFE) en McAllen, TX <i>(a 1 hora de el evento)</i><br><br>
 
 					<b>Tambien puede llegar a aeropuertos en ciudades mas grandes en TX</b> (San Antonio, Austin o Houston). Esta opcion es mas barata pero tiene que estar preparado(a) para manejar a Brownsville de ahi.<br><br>
 
@@ -325,7 +326,7 @@
 		<div class="container">
 			<h1 class="title">Regalos</h1>
 			<p class="subtitle m-auto">
-				Mientras empezamos nuestra vida juntos, también estamos haciendo otras transiciones. Daniel se gradua de la universidad y nosotros nos mudamos a Texas. Por favor considere apoyarnos en estas transiciones con regalos monetarios:<br><br>
+				Mientras empezamos nuestra vida juntos, también estamos haciendo otras transiciones. Daniel se gradua de la universidad con su Bachillerato en Ciencia Psicológica. También nos estaremos mudando de Providence, RI a Houston, TX, donde Nikki estará enseñando secundaria como parte del programa Teach for America 2020. Por favor considere apoyarnos en estas transiciones con regalos monetarios:<br><br>
 
 				Efectivo y cheques pueden ser recibidos a nombre de Daniel Riojas o Selena Tully<br>
 
@@ -371,7 +372,7 @@
 			<!--<p class="subtitle m-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>-->
 
 			<p><b>Cual es la fecha limite para confirmar?</b><br>
-			Mayo 1, 2020</p>
+			<mark>Junio 1, 2020</mark></p>
 			<!-- Cual es la fecha limite para confirmar?
 			Abril 1, 2020-->
 
